fix problems with scrollbars to left and right side of the app

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ body
     font-family: "Lato", sans-serif;
     background-image: linear-gradient( var(--zap-backgreen) 100px , var(--zap-backgrey) 0);
     background-repeat: no-repeat;
-    /* height: 100vh; */
+    background-size: cover;
+    height: 100vh;
 }
 
 img
@@ -24,7 +25,9 @@ img
 #main_app
 {
     /* height: 90vh; */
+    height: 700px;
     padding-top: 3em;
+    /* border-radius: 30px; */
 }
 
 .all_enemy_are_the_same,
@@ -284,6 +287,7 @@ img
 
                 .contact_info
                 {
+                    padding-left: 1em;
                     h4
                     {
                        font-size: 1.2em; 
@@ -309,7 +313,7 @@ img
 
 .all_enemy_are_the_same
 {
-    height: calc(100%-180px);
+    height: calc(100% - 180px);
 }
 /* #endregion LeftApp */
 
